# qgis_plugin_gpq_downloader

./: .gitignore  Installing-GeoParquet-QGIS.md  README.md  __init__.py  make_release.sh  metadata.txt  pyproject.toml  qgis_plugin_gpq_downloader.py  resources.qrc  resources_rc.py  utils.py
.github/workflows/: releases.yml  tests.yml
gpq_downloader/: __init__.py  dialog.py  logger.py  metadata.txt  plugin.py  utils.py
gpq_downloader/data/: formats.json  presets.json
gpq_downloader/tests/: conftest.py  test_dialog.py  test_integration.py  test_logger.py  test_plugin.py  test_utils.py  test_validation.py  test_worker.py
qgis_plugin_gpq_downloader/: README.md  __init__.py  metadata.txt
