[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qgis-plugin-gpq-downloader"
version = "0.1.0"
description = "Download GeoParquet data using DuckDB and filter it by viewport in QGIS."
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
readme = "README.md"
license = { text = "MIT" }
dependencies = [
    "duckdb>=0.8.0",
    "geopandas>=0.13.0",
    "pyarrow>=13.0.0",
    "pandas>=2.0.0",
    "shapely>=2.0.0",
    "requests>=2.0.0"
]

[project.urls]
homepage = "https://your-plugin-homepage.example.com"
repository = "https://github.com/your-repo/qgis-plugin-geoparquet"

[tool.setuptools]
packages = ["qgis_plugin_gpq_downloader"]
